# sunpeach-email-hubspot-processor

./: .gitignore  .prettierrc  README.md  client_secret.json  creds.json  email_extractor.py  extracted_data.csv  pyproject.toml  requirements.txt  service-account-key.json  web.py
.github/workflows/: build.yml  create-and-deploy.yml  deploy.yml  test.yml
terraform/: main.tf  variables.tf
