[tool.poetry]
name = "sunpeach-em-hubspot-processor"
version = "0.1.0"
description = ""
authors = ["Patrick Bennett <patrick.bennett@soundcloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.122.0"
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
requests = "^2.31.0"
flashtext = "^2.7"
logging = "^0.4.9.6"
google-api-core = "^2.17.1"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
google-cloud-storage = "^2.16.0"
nltk = "^3.8.1"
numpy = "^1.26.4"
nameparser = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
